--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -30,6 +30,7 @@
     = render :partial => 'macro_topics/list'
     = render :partial => 'micro_topics/list'
     = render :partial => 'question/tbd'
+    = render :partial => 'question/micro_topic_list'
   
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
