Added a hidden field called - obviously - a ninja to samurai-sword

--- a/app/views/toolbox/_samurai_sword.html.haml
+++ b/app/views/toolbox/_samurai_sword.html.haml
@@ -18,6 +18,8 @@
 
 .toolbox.samurai-sword.full-width{ :marker => "#{marker}" }
   .label.accordion-heading
+    .title
+    .footnote
   .accordion-content
     .checkbox-row.full-width
       .checkbox.left.hidden
@@ -39,3 +41,4 @@
     .button-row.full-width
       %input.button.left.hidden{ :type => :button, :disabled => true }
       %input.button.right.hidden{ :type => :button, :disabled => true }
+    %input.ninja{ :type => :hidden }
