When tagging questions, update the #side-panel accordion header w/ #right-panel selection ..
This means, updating the footnote in the header and filling the ninja
field with the last selected micro-topic's ID

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -204,6 +204,12 @@ legend > a {
   padding-bottom : 5px ;
 }
 
+.samurai-armory .accordion-heading > .footnote {
+  font-size : 11px ;
+  color : #6ca7ab ;
+  text-transform : lowercase ;
+}
+
 .samurai-armory .accordion-content { 
   font-size : 12px ;
   border : none ;
