Setting default marker on control and side panels ...
Consciously not setting it on middle, right or wide panels. These panels
should get their marker from any clicks within them - and only from those clicks
The side panel - as it can be anything - is not guaranteed to have a non-null
marker because its not guaranteed to have radio buttons within it

This change is being done now because the way our form work, they use
the marker on the panel within which they are. An undefined marker
only leads to params{ id => 'undefined' }, which is really annoying

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -44,14 +44,15 @@
     = csrf_meta_tag
 
   %body 
+    - default_marker = "#{current_account.nil? ? :tbd : current_account.loggable_id}"
     #visible-active-area
-      #control-panel.panel.horizontal
+      #control-panel.panel.horizontal{ :marker => default_marker } 
         #main-links 
           = render :partial => 'admin/top-panel'
         -# Links required in the currently loaded context
         #minor-links
 
-      #side-panel.panel.left.slim
+      #side-panel.panel.left.slim{ :marker => default_marker }
       #middle-panel.panel.slim.left
       #right-panel.panel.slim.left
       #wide-panel.panel.wide.left
