--- a/app/views/question/_tbd.html.haml
+++ b/app/views/question/_tbd.html.haml
@@ -9,4 +9,6 @@
   -# rendering in subsequent runs. Therefore, we have .samurai-garrison.
   -# Within it would be .samurai-armory (added in JS) and within that 
   -# would be .samurai-swords
-  .samurai-garrison.purgeable.clear-before-show
+  = form_tag questions_tag_path, :method => :put, :remote => true do |f|
+    = submit_tag :update 
+    .samurai-garrison.purgeable.clear-before-show
