--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,4 +4,5 @@
 *= require tweaks 
 *= require formtastic_changes 
 *= require jquery-custom-theme/styling 
+*= require_directory ../../../vendor/assets/stylesheets/popeye 
 */ 
