Dedicated pane for document preview. Used by popeye

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -34,6 +34,7 @@
   
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
+    = render :partial => 'toolbox/document_preview'
   
 !!!5
 
