--- a/app/views/question/_tbd.html.haml
+++ b/app/views/question/_tbd.html.haml
@@ -11,4 +11,5 @@
   -# would be .samurai-swords
   = form_tag questions_tag_path, :method => :put, :remote => true do |f|
     = submit_tag :update 
+    %input#tbd-preview-button.right{:type => :button, :value => "preview"}
     .samurai-garrison.purgeable.clear-before-show
