Added caption and controls on top of popeye's staging area ..
Also defined its styling. Now, when the image is expanded, a caption
is visible on the top-left corner and the controls in the top-right corner

--- a/app/views/toolbox/_document_preview.html.haml
+++ b/app/views/toolbox/_document_preview.html.haml
@@ -4,6 +4,8 @@
   %ul.ppy-imglist.purgeable
   .ppy-outer
     .ppy-stage
+      .ppy-caption
+        %span.ppy-text
       .ppy-nav
         %a.ppy-prev{ :title => :previous }= "Previous"
         %a.ppy-next{ :title => :next }= "Next"
