Cleaning up logic pertaining to what AJAX request to send on radio-button click ..
The old scheme of setting a 'url' attribute on every radio-button was unwieldy,
ugly, unintelligible and unscaleable.

The new scheme is similar to the kind of logic implemented in receiver.js.coffee.
The decision of which AJAX request to send is now done once the click
event has been captured by some pre-delegated parent DOM element

Also, as we now don't embed an attribute on every radio-button,
the HTML is cleaner. Plus, less revealing to anyone who does
'View Source' in a browser.

Gaps to be filled-in in subsequent commits

--- a/app/views/schools/_controls.html.haml
+++ b/app/views/schools/_controls.html.haml
@@ -10,8 +10,7 @@
     = minor_link :for => 'new-studygroups', :label => 'New Sections',
                  :with => { :panels => { :middle => '#new-studygroups' } }
     = minor_link :for => 'edit-studygroups', :label => 'Edit Sections', 
-                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'},
-                           :radio_urls => {:side => 'school/sections.json?id=|school/unassigned-students.json?id='} }
+                 :with => {:panels => {:middle => '#studygroups-radiolist', :right => '#student-list'} }
 
   = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :states
