--- a/app/views/admin/_top-panel.html.haml
+++ b/app/views/admin/_top-panel.html.haml
@@ -9,11 +9,9 @@
   = main_link :for => :examiners, :with => {:panels => {} }
 
   = main_link :for => :courses, :with => {:panels => { :middle => '#macro-topic-list', 
-                                                       :right => '#edit-syllabi-form' },
-                                          :radio_urls => {:side => 'course/coverage.json?id='} }
+                                                       :right => '#edit-syllabi-form' } }
 
-  = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}, 
-                                             :radio_urls => {:side => 'yardstick.json?id='} }
+  = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}}
 
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
