Styling of the just-clicked link delegated to CSS - as it always should have been
Also, when we switch main-links, all corresponding minor links the
control-panel are deselected

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -40,6 +40,10 @@ fieldset.inputs li.boolean.input {
   float : left ;
 } 
 
+.main-link[selected], .minor-link[selected] {
+  border-bottom : 2px solid #6ca7ab ;
+}
+
 .no-bullets, ul.sortable {
   list-style-type : none ;
 } 
