Removed redundant class attributes
Only one class attribute - purgeable - is required for nodes within
which JSON data is displayed. Everything else is superfluous

Corresponding changes in Coffee code to follow

--- a/app/views/courses/_summary.html.haml
+++ b/app/views/courses/_summary.html.haml
@@ -3,4 +3,4 @@
   %legend
     %span.target= "courses"
     %span.operation= "select one"
-  .purgeable.clear-before-show.empty-on-putback 
+  .purgeable
