--- a/app/views/study_groups/_list.html.haml
+++ b/app/views/study_groups/_list.html.haml
@@ -15,5 +15,5 @@
     %span.operation= "select sections"
   = form_tag teachers_update_roster_path, :method => :put, :remote => true do |f| 
     = submit_tag "Update"
-    .purgeable.clear-before-show.empty-on-putback 
+    .purgeable
 
