--- a/app/views/study_groups/_radio_list.html.haml
+++ b/app/views/study_groups/_radio_list.html.haml
@@ -3,4 +3,4 @@
   %legend
     %span.target= "Sections"
     %span.operation= "Select One"
-  .purgeable.clear-before-show.empty-on-putback 
+  .purgeable
