--- a/app/views/question/_tbd.html.haml
+++ b/app/views/question/_tbd.html.haml
@@ -12,4 +12,4 @@
   = form_tag questions_tag_path, :method => :put, :remote => true do |f|
     = submit_tag :update 
     %input#tbd-preview-button.right{:type => :button, :value => "preview"}
-    .samurai-garrison.purgeable.clear-before-show
+    .samurai-garrison.purgeable
