--- a/app/views/schools/_admin-view.html.haml
+++ b/app/views/schools/_admin-view.html.haml
@@ -3,5 +3,5 @@
   %legend
     %span.target= "Schools"
     %span.operation= "Select One"
-  .purgeable.clear-before-show.empty-on-putback 
+  .purgeable
 
