--- a/app/views/toolbox/_samurai_sword.html.haml
+++ b/app/views/toolbox/_samurai_sword.html.haml
@@ -16,7 +16,7 @@
 - marker = marker.blank? ? 'tbd' : marker
 - label = label.blank? ? 'tbd' : label
 
-.toolbox.samurai-sword.full-width{ :marker => "#{marker}" }
+.blueprint.toolbox.samurai-sword.full-width{ :marker => "#{marker}" }
   .label.accordion-heading
     .title
     .footnote
