--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -18,7 +18,7 @@
 - marker = marker.blank? ? 'tbd' : marker
 - label = label.blank? ? 'tbd' : label
 
-.toolbox.swiss-knife.full-width{ :marker => "#{marker}" }
+.blueprint.toolbox.swiss-knife.full-width{ :marker => "#{marker}" }
   %input.left{ :type => :radio, :class => :radio, :marker => "#{marker}", :disabled => true }  
   %input.left{ :type => :checkbox, :class => :checkbox, :disabled => true, 
                :marker => "#{marker}", :name => "checked[#{marker}]" }  
