Renamed top-panel as control-panel (more descriptive)

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -49,7 +49,7 @@
     #visible-active-area
       #control-panel.panel.horizontal{ :marker => default_marker } 
         #main-links 
-          = render :partial => 'admin/top-panel'
+          = render :partial => 'admin/control-panel'
         -# Links required in the currently loaded context
         #minor-links
 
