--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -1,4 +1,6 @@
 
 %ul.no-bullets
-  = main_link :for => :tbd
+  = main_link :for => 'answer-sheets'
+  = main_link :for => 'report-cards'
+  = main_link :for => 'quizzes'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
