Minor links for #quizzes-link

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -1,6 +1,8 @@
 
 - content_for :toolbox do 
   #toolbox.hidden 
+    = render :partial => 'quizzes/controls'
+
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
     = render :partial => 'toolbox/document_preview'
