Added mcro & micro topics lists to toolbox

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -3,6 +3,9 @@
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
 
+    = render :partial => 'macro_topics/list'
+    = render :partial => 'micro_topics/list'
+
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
     = render :partial => 'toolbox/document_preview'
