--- a/app/views/teachers/_new.html.haml
+++ b/app/views/teachers/_new.html.haml
@@ -7,6 +7,7 @@
     = f.inputs :name => :mandatory do 
       = f.input :first_name, :label => 'First Name'
       = f.input :last_name, :label => 'Surname'
+      = f.input :subjects, :as => :select, :collection => Subject.all, :include_blank => false, :multiple => true
 
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
