Main link for editing marking scheme

--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -3,4 +3,5 @@
   = main_link :for => 'answer-sheets'
   = main_link :for => 'report-cards'
   = main_link :for => 'quizzes'
+  = main_link :for => 'marking-scheme'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
