Placeholder for quizzes summary table

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -2,6 +2,7 @@
 - content_for :toolbox do 
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
+    = render :partial => 'quizzes/summary'
 
     = render :partial => 'macro_topics/list'
     = render :partial => 'micro_topics/list'
