--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -2,4 +2,4 @@
 #quiz-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'new-quiz', :label => 'make new quiz'
-    = minor_link :for => 'review-quiz', :label => 'review past quizzes'
+    = minor_link :for => 'assign-quiz', :label => 'assign selected'
