--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -2,6 +2,6 @@
 %ul.no-bullets
   = main_link :for => 'answer-sheets'
   = main_link :for => 'report-cards'
-  = main_link :for => 'quizzes'
+  = main_link :for => 'quizzes', :with => {:panels => {:side => '#macro-search-form'}}
   = main_link :for => 'marking-scheme'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
