[Quiz]: Defined side-panel shells for when building a new quiz
There would eventually be a form with space for search results
below it

The search result would be the list of applicable macro-topics
for this (board, subject, klass) combination

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -3,6 +3,7 @@
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
     = render :partial => 'quizzes/summary'
+    = render :partial => 'quizzes/macro_search_form'
 
     = render :partial => 'macro_topics/list'
     = render :partial => 'micro_topics/list'
