--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -1,5 +1,6 @@
 
 #quiz-controls.top-panel-controls
   %ul.no-bullets
-    = minor_link :for => 'new-quiz', :label => 'make new quiz'
+    = minor_link :for => 'new-quiz', :label => 'make new quiz',
+                 :with => {:panels => {:side => '#macro-search-form'}}
     = minor_link :for => 'assign-quiz', :label => 'assign selected'
