--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -16,7 +16,7 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "application"
+    = javascript_include_tag "application", "teachers"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
