Minor styling changes

--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -30,6 +30,10 @@ fieldset.inputs li.boolean.input {
   font-weight : bold ;
 } 
 
+.search-form { 
+  min-height : 50px ;
+} 
+
 .sortable { 
   min-height : 30px ;
 } 
