--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -11,6 +11,7 @@
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
     = render :partial => 'toolbox/document_preview'
+    = render :partial => 'toolbox/inline_error'
 
 !!!5
 
