--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -28,7 +28,8 @@
     = render :partial => 'study_groups/list'
     = render :partial => 'study_groups/radio_list'
     = render :partial => 'macro_topics/list'
-    = render :partial => 'micro_topics/list'
+    = render :partial => 'macro_topics/masterlist'
+    = render :partial => 'micro_topics/masterlist'
     = render :partial => 'question/tbd'
     = render :partial => 'question/micro_topic_list'
   
