--- a/app/views/micro_topics/_masterlist.html.haml
+++ b/app/views/micro_topics/_masterlist.html.haml
@@ -1,9 +1,16 @@
 
-#micro-topic-list.put-back
+#micro-masterlist.hidden
   - list = get_list_of :macro_topics
   - list.each do |macro|
-    %div.hidden{ :marker => "#{macro.id}", 'back-to' => '#micro-topic-list' }
+    %div{ :marker => "#{macro.id}" }
       - micros = MicroTopic.where(:macro_topic_id => macro.id).order(:name)
       - micros.each do |micro|
         = render :partial => 'toolbox/swiss_knife', 
                  :locals => { :marker => "#{micro.id}", :label => "#{micro.name}" }
+
+-# All "applicable" micros (context specific) listed within this ...
+#micro-selected-list.sortable.put-back
+
+-# .. and every other micro-topic, within this 
+#micro-deselected-list.sortable.put-back
+
