--- a/app/views/micro_topics/_masterlist.html.haml
+++ b/app/views/micro_topics/_masterlist.html.haml
@@ -2,7 +2,7 @@
 #micro-masterlist.hidden
   - list = get_list_of :macro_topics
   - list.each do |macro|
-    %div{ :marker => "#{macro.id}" }
+    %div.hidden{ :marker => "#{macro.id}" }
       - micros = MicroTopic.where(:macro_topic_id => macro.id).order(:name)
       - micros.each do |micro|
         = render :partial => 'toolbox/swiss_knife', 
