--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -1,7 +1,7 @@
 
 %ul.no-bullets
-  = main_link :for => :tbd, :with => { :panels => { :middle => '#macro-topic-list', 
-                                                    :right => '#micro-topics-for-tagging > #micro-topic-list' } } 
+  = main_link :for => :tbd, :with => { :panels => { :middle => '#panel-macro-masterlist', 
+                                                    :right => '#panel-micro-masterlist' } }
 
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
