First steps towards adding the ability to build a Quiz ..

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -3,10 +3,10 @@
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
     = render :partial => 'quizzes/summary'
-    = render :partial => 'quizzes/macro_search_form'
+    = render :partial => 'quizzes/build'
 
-    = render :partial => 'macro_topics/list'
-    = render :partial => 'micro_topics/list'
+    = render :partial => 'macro_topics/masterlist'
+    = render :partial => 'micro_topics/masterlist'
 
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
