--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -31,8 +31,7 @@
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
     = render :partial => 'question/tbd'
-    = render :partial => 'question/micro_masterlist'
-    = render :partial => 'question/macro_masterlist'
+    = render :partial => 'question/tag'
   
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
