--- a/app/assets/stylesheets/formtastic_changes.css
+++ b/app/assets/stylesheets/formtastic_changes.css
@@ -1,27 +1,34 @@
 
+form.formtastic { 
+  font-family : "Trebuchet MS", Helvetica, Arial, sans-serif;
+} 
+
 form.formtastic fieldset.inputs p.inline-hints {
    font-size : 13px ; 
-   font-family : Helvetica ;
+   /*font-family : Helvetica ;*/
    text-align : justify ;
    float : left ; 
    border-top : 1px solid gray ;
 } 
 
 form.formtastic fieldset.inputs label.label { 
-  font-size : 14px ;
-  font-variant : small-caps ;
+  font-size : 13px ;
+  text-transform : lowercase ;
   font-weight : bold ;
-  /*width : 100% ;*/
 } 
 
 fieldset.inputs textarea, fieldset.inputs input[type="text"] {
-  font-family : Helvetica Arial ;
+  font-family : "Trebuchet MS" ;
   font-size : 13px ;
-  border : none ; 
+  border : 1px solid #6ca7ab; 
   background : inherit ; 
   font-style : sans-serif;
-  width : 100% ;
-  text-align : justify ;
+  padding-left : 5px ;
+  max-width : 67% ;
+  -moz-border-radius : 3px ;
+  border-radius : 3px ;
+  padding-bottom : 4px ;
+  padding-top : 4px ;
 } 
 
 fieldset.inputs select {
@@ -33,7 +40,7 @@ fieldset.buttons {
 } 
 
 .formtastic fieldset.boolean-flags li {
-    padding : 0px ; 
-    float : left ;
-    font-variant : small-caps ;
+  padding : 0px ; 
+  float : left ;
+  text-transform : lowercase ;
 } 
