--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -12,6 +12,7 @@
     = render :partial => 'students/new'
     = render :partial => 'study_groups/new'
     = render :partial => 'examiners/new'
+    = render :partial => 'teachers/edit'
 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
