--- a/app/views/quizzes/_build.html.haml
+++ b/app/views/quizzes/_build.html.haml
@@ -4,7 +4,8 @@
     %span.target= "start here"
     %span.operation= "choose subject, class & then the topics" 
   .search-form
-    = form_tag 'teacher/applicable_macros', :remote => true, :method => :get do |f|
+    = form_tag '#', :remote => true, :method => :get, 
+      :marker => "#{current_account.loggable_id}", :board_id => "#{current_account.loggable.school.board_id}" do |f|
       .search-parameters.full-width
         = drop_down_menu_for :subjects, :include_blank => false
         = drop_down_menu_for :klasses, :include_blank => false
