--- a/app/assets/stylesheets/tweaks.css
+++ b/app/assets/stylesheets/tweaks.css
@@ -5,10 +5,12 @@
   padding-top : 40px ;
 } 
 
+/*
 .submit-buttons { 
    margin-top : 7px ;
    margin-left : 40% ;
 } 
+*/
 
 .hidden { 
     display : none ;
