Changed macro-search-form to quiz-builder-form
The old name was horrible !! How do I come up with them ?

--- a/app/views/quizzes/_build.html.haml
+++ b/app/views/quizzes/_build.html.haml
@@ -1,5 +1,5 @@
 
-#macro-search-form.full-width.left
+#quiz-builder-form.full-width.left
   %legend
     %span.target= "start here"
     %span.operation= "choose subject, class & then the topics" 
