--- a/app/views/quizzes/_build.html.haml
+++ b/app/views/quizzes/_build.html.haml
@@ -6,12 +6,13 @@
   .search-form
     = form_tag '#', :remote => true, :method => :get, 
       :marker => "#{current_account.loggable_id}", :board_id => "#{current_account.loggable.school.board_id}" do |f|
-      .search-parameters.full-width
-        .search-inputs.full-width
+      .search-parameters
+        .search-inputs.left
           = drop_down_menu_for :subjects, :include_blank => false
           = drop_down_menu_for :klasses, :include_blank => false
-        .submit-buttons.full-width
-          = submit_tag 'show candidates', :id => 'btn-candidate-questions', :class => 'no-style right'
-          = submit_tag 'search', :id => 'btn-teacher-coverage', :class => 'no-style left'
+        .submit-buttons.right
+          = submit_tag 'search', :id => 'btn-teacher-coverage', :class => 'no-style'
+          = submit_tag 'show ', :id => 'btn-candidate-questions', :class => 'no-style'
+          = submit_tag 'preview', :id => 'btn-quiz-preview', :class => 'no-style'
       .search-results.purgeable
         -# an accordion is added here on-the-fly by jQuery
