--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -2,6 +2,6 @@
 #quiz-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'new-quiz', :label => 'make new quiz',
-                 :with => { :panels => {:side => '#quiz-builder-form'} }
+                 :with => { :panels => {:side => '#quiz-builder-form', :wide => '#document-preview'} }
                                        
     = minor_link :for => 'assign-quiz', :label => 'assign selected'
