Added .ppy-current to popeye hTML structure
When present, .ppy-current tracks the index of the currently displayed image.
That said, this commit should have come before the last two

--- a/app/views/toolbox/_document_preview.html.haml
+++ b/app/views/toolbox/_document_preview.html.haml
@@ -5,6 +5,8 @@
     .ppy-stage
       .ppy-caption
         %span.ppy-text
+        .ppy-counter
+          %strong.ppy-current
       .ppy-nav
         %a.ppy-prev{ :title => :previous }= "Previous"
         %a.ppy-next{ :title => :next }= "Next"
