Changed 'btn-build-quiz' to have type 'button' and not 'submit'
Why ? Because this button is not supposed to submit the <form> its a part
of but submit some other data through AJAX

--- a/app/views/quizzes/_build.html.haml
+++ b/app/views/quizzes/_build.html.haml
@@ -13,6 +13,6 @@
         .submit-buttons.right
           = submit_tag 'view topics', :id => 'btn-teacher-coverage', :class => 'no-style'
           = submit_tag 'get choices', :id => 'btn-candidate-questions', :class => 'no-style'
-          = submit_tag 'build quiz', :id => 'btn-quiz-preview', :class => 'no-style'
+          %input#btn-build-quiz.no-style{:type => :button, :value => 'build quiz'}
       .search-results.purgeable
         -# an accordion is added here on-the-fly by jQuery
