Renamed #studygroups-list to #edit-student-klass-mapping ...
The latter suggests better that a <form> might be involved.
The old name made it seem like a static list would be rendered

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -26,7 +26,7 @@
     = render :partial => 'yardsticks/summary'
     = render :partial => 'teachers/list'
     = render :partial => 'study_groups/studentlist'
-    = render :partial => 'study_groups/list'
+    = render :partial => 'study_groups/edit'
     = render :partial => 'study_groups/radio_list'
     = render :partial => 'macro_topics/list'
     = render :partial => 'macro_topics/masterlist'
