--- a/app/views/study_groups/_edit.html.haml
+++ b/app/views/study_groups/_edit.html.haml
@@ -9,7 +9,7 @@
 -# The next action is usually some sort of form submission. And when its
 -# going to be a form submission, we first make the form
 
-#studygroups-list.multi-select.selection.full-width.left
+#edit-student-klass-mapping.multi-select.selection.full-width.left
   %legend
     %span.target= "roster"
     %span.operation= "select sections"
