First steps towards enabling assignment of a quiz to students

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -8,6 +8,10 @@
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
 
+    = render :partial => 'study_groups/enrolled'
+
+    = render :partial => 'teachers/roster'
+
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/samurai_sword'
     = render :partial => 'toolbox/document_preview'
