--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -4,4 +4,5 @@
     = minor_link :for => 'new-quiz', :label => 'make new quiz',
                  :with => { :panels => {:side => '#quiz-builder-form', :wide => '#document-preview'} }
                                        
-    = minor_link :for => 'assign-quiz', :label => 'assign selected'
+    = minor_link :for => 'assign-quiz', :label => 'assign selected',
+                 :with => { :panels => {:middle => '#teacher-roster', :right => '#enrolled-student-list'} }
