Renamed samurai_sword to katana

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -35,7 +35,7 @@
     = render :partial => 'question/tag'
   
     = render :partial => 'toolbox/swiss_knife'
-    = render :partial => 'toolbox/samurai_sword'
+    = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/document_preview'
   
 !!!5
