--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -13,7 +13,7 @@
     = render :partial => 'teachers/roster'
 
     = render :partial => 'toolbox/swiss_knife'
-    = render :partial => 'toolbox/samurai_sword'
+    = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
 
