--- a/app/views/toolbox/_katana.html.haml
+++ b/app/views/toolbox/_katana.html.haml
@@ -10,13 +10,13 @@
   all customization has to be done, therefore, in JS. This element
   makes no assumptions about the context its being used in
 
-  One more thing : the samurai-sword is rendered as a jQuery accordion.
-  So, you sheath and un-sheath a samurai-sword
+  One more thing : the katana is rendered as a jQuery accordion.
+  So, you sheath and un-sheath a katana
 
 - marker = marker.blank? ? 'tbd' : marker
 - label = label.blank? ? 'tbd' : label
 
-.blueprint.toolbox.samurai-sword.full-width{ :marker => "#{marker}" }
+.blueprint.toolbox.katana.full-width{ :marker => "#{marker}" }
   .label.accordion-heading
     .title
     .footnote
