--- a/app/views/question/_tbd.html.haml
+++ b/app/views/question/_tbd.html.haml
@@ -8,7 +8,7 @@
   -# .accordion() sets on the element will interfere with accordion 
   -# rendering in subsequent runs. Therefore, we have .samurai-garrison.
   -# Within it would be .samurai-armory (added in JS) and within that 
-  -# would be .samurai-swords
+  -# would be .katanas
   = form_tag questions_tag_path, :method => :put, :remote => true do |f|
     = submit_tag :update 
     %input#tbd-preview-button.right{:type => :button, :value => "preview"}
