Preview button toggles views on successive clicks

--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -5,4 +5,4 @@
                  :with => { :panels => {:side => '#quiz-builder-form', :wide => '#document-preview'} }
                                        
     = minor_link :for => 'assign-quiz', :label => 'assign selected',
-                 :with => { :panels => {:middle => '#teacher-roster', :right => '#enrolled-student-list'} }
+                 :with => { :panels => {:right => '#enrolled-student-list'} }
