--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -2,6 +2,7 @@
 %ul.no-bullets
   = main_link :for => 'answer-sheets'
   = main_link :for => 'report-cards'
-  = main_link :for => 'quizzes', :with => {:panels => {:middle => '#teacher-roster'}}
+  = main_link :for => 'quizzes', :with => {:panels => {:middle => '#teacher-roster', 
+                                                       :right => '#enrolled-student-list'}}
   = main_link :for => 'marking-scheme'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
