Changed button caption to assign

--- a/app/views/study_groups/_enrolled.html.haml
+++ b/app/views/study_groups/_enrolled.html.haml
@@ -5,6 +5,6 @@
     %span.operation= "select students for quiz" 
   = form_tag 'quiz/assign', :remote => true, :method => :put do |f|
     .controls
-      = submit_tag 'build', :class => 'no-style right'
+      = submit_tag 'assign', :class => 'no-style right'
       %input.left.no-style.check-all{:type => :button, :value => 'select all'}
     .purgeable
