--- a/app/views/schools/_edit.html.haml
+++ b/app/views/schools/_edit.html.haml
@@ -4,10 +4,12 @@
     %span.target= "Quick Edit"
     %span.operation= "School"
   = semantic_form_for :school, :remote => true, :url => '/school', :method => :put do |f| 
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
+    .controls
+      = submit_tag 'update', :class => 'no-style'
 
     = f.inputs do 
+      = f.input :board_id, :label => 'board', :as => :select, :collection => Board.all,
+                :input_html => { :marker => :board_id }
       = f.input :name, :input_html => { :marker => :name } 
       = f.input :street_address, :label => "Address", :input_html => { :marker => :street_address } 
       = f.input :city, :input_html => { :marker => :city}
