'new-student' & 'new-teacher' <form>s modified to pick school-ID from side panel

--- a/app/views/teachers/_new.html.haml
+++ b/app/views/teachers/_new.html.haml
@@ -4,11 +4,11 @@
     %span.target= "Teacher"
     %span.operation= "Quick Add"
   = semantic_form_for :teacher, :remote => true, :url => teacher_path do |f|
+    .controls
+      = submit_tag 'add new teacher', :class => 'no-style'
+
     = f.inputs :name => :mandatory do 
       = f.input :first_name
       = f.input :last_name
       = f.input :subjects, :label => 'teaches?', :as => :select, 
                 :collection => Subject.all, :include_blank => false, :multiple => true
-
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
