--- a/app/views/students/_new.html.haml
+++ b/app/views/students/_new.html.haml
@@ -4,9 +4,9 @@
     %span.target= "Student"
     %span.operation= "Quick Add"
   = semantic_form_for :student, :remote => true, :url => student_path do |f| 
+    .controls
+      = submit_tag 'add new student', :class => 'no-style'
+
     = f.inputs :name => :mandatory do 
       = f.input :first_name
       = f.input :last_name
-
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
